<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ (c) Copyright 2013 Stefan Langer
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->
<resources>

    <string name="app_name">E34Clock</string>
    <string name="action_settings">Settings</string>
    <string name="pref_sh_title">Show Highlights</string>
    <string name="pref_sh_summary">Show highlights summary</string>
    <string name="pref_time_title">Open Time Settings</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="location_txt">Markt Schwaben</string>
    <string name="date_txt">--.--.----</string>
    <string name="battery_txt">---%</string>
    <string name="alarm_txt">--:--</string>
    <string name="date_label">E34 Date</string>
    <string name="clock_label">E34 Clock</string>
    <string name="clock_only_label">E34 Only Clock</string>
    <string name="clock_full_label">E34 Full Clock</string>

</resources>
